--- a/index.html
+++ b/index.html
@@ -227,25 +227,110 @@
      </div>
      <!-- WHAT YOU NEED END -->
 
-    <!-- YOUR PARTNER IN BUSINESS EXCELLENCE START -->
-     <div class="business container-fluid">
+    <!-- WHAT WE DO START -->
+     <div class="we-do container-fluid">
+      <img class="chair-man" src="img/chair-man.png">
+      <h2 class="text-center">What we do?</h2>
+      <p class="text-center" style="margin-top:2.5vw; margin-left:-7.5vw;">We craft digital solutions through website creation, social media management, and graphics design services.</p>
+      
       <div class="row">
 
-        <div class="col-sm-6 col-12">
-          <div class="cols col1">
-
+        <div class="col-sm-3 col-12">
+          <div class="cols col4 wow animate__animated animate__fadeIn" data-wow-duration="1s">
+            <div class="title">
+              <span class="span1" style="
+                font-size:10vw;
+                color:#c7d1d1;
+                font-family:Graphik Medium,sans-serif;
+                font-weight:600;
+                ">S</span>
+                <span class="span2" style="
+                font-size:1.5vw;
+                font-family:Graphik Medium,sans-serif;
+                font-weight:600;
+                margin-left:-0.5vw;
+                ">EO Optimization</span>
+            </div>
+            <p>
+              I optimize websites for search engines,
+              boosting online visibility and driving targeted traffic
+              through strategic SEO techniques and solutions.
+            </p>
           </div>
         </div>
 
-        <div class="col-sm-6 col-12">
-          <div class="cols col2">
+        <div class="col-sm-3 col-12">
+          <div class="cols col4 wow animate__animated animate__fadeIn" data-wow-duration="1s">
+            <div class="title">
+              <span class="span1" style="
+                font-size:10vw;
+                color:#c7d1d1;
+                font-family:Graphik Medium,sans-serif;
+                font-weight:600;
+                ">W</span>
+                <span class="span2" style="
+                font-family:Graphik Medium,sans-serif;
+                font-weight:600;
+                margin-left:-0.5vw;
+                ">eb Development</span>
+            </div>
+            <p>
+              I optimize websites for search engines,
+              boosting online visibility and driving targeted traffic
+              through strategic SEO techniques and solutions.
+            </p>
+          </div>
+        </div>
 
+        <div class="col-sm-3 col-12">
+          <div class="cols col4 wow animate__animated animate__fadeIn" data-wow-duration="1s">
+            <div class="title">
+              <span class="span1 D" style="
+                font-size:10vw;
+                color:#c7d1d1;
+                font-family:Graphik Medium,sans-serif;
+                font-weight:600;
+                ">D</span>
+                <span class="span2" style="
+                font-family:Graphik Medium,sans-serif;
+                font-weight:600;
+                margin-left:-0.5vw;
+                ">esign</span>
+            </div>
+            <p>
+              I optimize websites for search engines,
+              boosting online visibility and driving targeted traffic
+              through strategic SEO techniques and solutions.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-sm-3 col-12">
+          <div class="cols col4 wow animate__animated animate__fadeIn" data-wow-duration="1s">
+            <div class="title">
+              <span class="span1" style="
+                font-size:10vw;
+                color:#c7d1d1;
+                font-family:Graphik Medium,sans-serif;
+                font-weight:600;
+                ">A</span>
+                <span class="span2" style="
+                font-family:Graphik Medium,sans-serif;
+                font-weight:600;
+                margin-left:-0.5vw;
+                ">dobe Photoshop</span>
+            </div>
+            <p>
+              I optimize websites for search engines,
+              boosting online visibility and driving targeted traffic
+              through strategic SEO techniques and solutions.
+            </p>
           </div>
         </div>
 
       </div>
      </div>
-    <!-- YOUR PARTNER IN BUSINESS EXCELLENCE END -->
+    <!-- WHAT WE DO END -->
 
 
 
@@ -289,17 +374,3 @@
   
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
