--- a/index.html
+++ b/index.html
@@ -137,24 +137,65 @@
 <!-- NAVBAR END  -->
 
     <!-- GROW WITH START -->
-     <div class="grow container-fluid">
+     <div class="business container-fluid">
         <div class="row">
 
             <div class="col-sm-6 col-12 wow animate__animated animate__backInLeft" data-wow-duration="2s">
                 <div class="cols col1">
-                    <h2 class="text-capitalize">Grow with<br> WOP</h2>
-                    <p>Let's bring your business vision to life with the right creative expertise.
-                        We connect you with top talent who understand that smart design is essential to building a strong,
-                        professional brand that stands out.
+                  <div class="update">
+                    <div class="new-update text-center" style="
+                      height:2vw;
+                      width:30%;
+                      font-size:1.25vw;
+                      background-color:#999e9e;
+                      border-radius:0.5vw;
+                      ">New Update</div>
+                    <div class="check-out" style="
+                    color:#999e9e;
+                    font-size:1.25vw;
+                    ">Check out the newest features</div>
+                  </div>
+                    <h2 class="text-capitalize">Get into business</h2>
+                    <p>Unlock entrepreneurial potential with expert guidance,
+                       innovative strategies, and cutting-edge solutions to thrive.
                     </p>
                     <button>Get a design</button>
                 </div>
             </div>
 
-            <div class="col-sm-6 col-12 wow animate__animated animate__backInRight" data-wow-duration="2s">
+            <div class="col-sm-6 col-12 wow animate__animated animate__backInRigh" data-wow-duration="2s">
                 <div class="cols col2">
-                    <!-- Swiper -->
-  <div class="swiper mySwiper">
+
+
+                  <form action="#">
+                    <section>
+                      <h6>Full Name <sup><i class="fa-solid fa-asterisk"></i></sup></h6>
+                      <input class="mt-1" type="text">
+                    </section>
+
+                    <section>
+                      <h6>UserName <sup><i class="fa-solid fa-asterisk"></i></sup></h6>
+                      <input class="mt-1" type="text">
+                    </section>
+
+                    <section>
+                      <h6>Email <sup><i class="fa-solid fa-asterisk"></i></sup></h6>
+                      <input class="mt-1" type="email">
+                    </section>
+
+                    <section>
+                      <h6>Password <sup><i class="fa-solid fa-asterisk"></i></sup></h6>
+                      <input class="mt-1" type="password">
+                    </section>
+
+                    <section>
+                      <button>Submit</button>
+                    </section>
+
+                  </form>
+
+
+<!-- <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <img src="img/c1.png" />
@@ -169,11 +210,7 @@
         <img src="img/c2.png" />
       </div>
     </div>
-    <!-- <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div> -->
-  </div>
-                    <!-- Swiper -->
+  </div> -->
                 </div>
             </div>
 
@@ -486,7 +523,7 @@
 <!-- Swiper JS -->
 
 <!-- Initialize Swiper -->
-  <script>
+<!-- <script>
     var swiper = new Swiper(".mySwiper", {
       spaceBetween: 30,
       effect: "fade",
@@ -503,7 +540,7 @@
         clickable: true,
       },
     });
-  </script>
+  </script> -->
 
   <!--WOW JS-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js" integrity="sha512-Rd5Gf5A6chsunOJte+gKWyECMqkG8MgBYD1u80LOOJBfl6ka9CtatRrD4P0P5Q5V/z/ecvOCSYC8tLoWNrCpPg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
