--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-6 col-12 wow animate__animated animate__backInRigh" data-wow-duration="2s">
+            <div class="col-sm-6 col-12 wow animate__animated animate__backInRight" data-wow-duration="2s">
                 <div class="cols col2">
 
 
@@ -552,3 +552,4 @@
   
   </body>
 </html>
+
